--- a/.github/workflows/front-end-CICD.yml
+++ b/.github/workflows/front-end-CICD.yml
@@ -2,14 +2,15 @@ name : Upload website to S3
 
 on:
   push:
-    - main
-
+      branches:
+      - main
+    
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    -uses: actions/checkout@master
-    -uses: jakejarvis/s3-sync-action@master
+    - uses: actions/checkout@master
+    - uses: jakejarvis/s3-sync-action@master
     with:
       args: --acl public-read --follow-symlinks --delete
     env:
@@ -17,4 +18,4 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: 'us-east-1'
-      SOURCE_DIR: 'website 0'
+      SOURCE_DIR: 'index.html'
